fixed first p text-align

--- a/hw4-block/css/styles.css
+++ b/hw4-block/css/styles.css
@@ -49,6 +49,7 @@ a {
     max-width: 446px;
     font-size: 14px;
     margin-bottom: 40px;
+    text-align: justify;
 }
 
 .logos-wrapper {
